fixed overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,7 +69,8 @@ body {
 
 header#main-header {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 header#main-header > #content {
